samples/_failures_safe/1761279590_480b42_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a95f6120.c: In function ‘main’:
./samples/SAFE/__tmp_a95f6120.c:169:5: error: expected declaration or statement at end of input
  169 |     }
      |     ^
